# RedeSocial

./: pyproject.toml
social_network/: settings.py
users/: models.py
